# opendaff

./: .clang-format  .cmake-format.yaml  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  _d_a_f_f_8h.html  _d_a_f_f_8h_source.html  _d_a_f_f_content_8h.html  _d_a_f_f_content_8h_source.html  _d_a_f_f_content_d_f_t_8h.html  _d_a_f_f_content_d_f_t_8h_source.html  _d_a_f_f_content_i_r_8h.html  _d_a_f_f_content_i_r_8h_source.html  _d_a_f_f_content_m_p_s_8h.html  _d_a_f_f_content_m_p_s_8h_source.html  _d_a_f_f_content_m_s_8h.html  _d_a_f_f_content_m_s_8h_source.html  _d_a_f_f_content_p_s_8h.html  _d_a_f_f_content_p_s_8h_source.html  _d_a_f_f_d_l_l_main_8cpp.html  _d_a_f_f_d_l_l_main_8cpp_source.html  _d_a_f_f_defs_8h.html  _d_a_f_f_defs_8h_source.html  _d_a_f_f_header_8h.html  _d_a_f_f_header_8h_source.html  _d_a_f_f_metadata_8h.html  _d_a_f_f_metadata_8h_source.html  _d_a_f_f_metadata_impl_8cpp.html  _d_a_f_f_metadata_impl_8cpp_source.html  _d_a_f_f_metadata_impl_8h.html  _d_a_f_f_metadata_impl_8h_source.html  _d_a_f_f_properties_8h.html  _d_a_f_f_properties_8h_source.html  _d_a_f_f_properties_impl_8h.html  _d_a_f_f_properties_impl_8h_source.html  _d_a_f_f_reader_8cpp.html  _d_a_f_f_reader_8cpp_source.html  _d_a_f_f_reader_8h.html  (+238 more)
.github/workflows/: README.md  bindings.yml  ci.yml  docs.yml  release.yml
apps/tool/: CMakeLists.txt  DAFFTool.cpp  Export.cpp  Export.h
apps/tool/getopt/: getopt.c  getopt.h
apps/viewer/: CMakeLists.txt
apps/viewer/src/: QDAFF2DPlot.cpp  QDAFF2DPlot.h  QDAFF2DPlotFrame.h  QDAFFContentTable.h  QDAFFDialogExport2DPlot.cpp  QDAFFDialogExport2DPlot.h  QDAFFDialogExport3DPlotImage.cpp  QDAFFDialogExport3DPlotImage.h  QDAFFDialogExport3DPlotImageSeries.cpp  QDAFFDialogExport3DPlotImageSeries.h  QDAFFHeaderGroupBox.h  QDAFFMetadataTable.h  QDAFFPropertiesTable.h  QDAFFVTKWidget.cpp  QDAFFVTKWidget.h  QDAFFViewer.cpp  QDAFFViewerWindow.cpp  QDAFFViewerWindow.h
bindings/csharp/: CMakeLists.txt  DAFF.cs  DAFFCSWrapper.cpp  DAFFCSWrapper.h  DAFFTest.cs  DAFFTest.csproj
bindings/go/: .gitignore  CMakeLists.txt  README.md  daff.go  daff_go_wrapper.cpp  daff_go_wrapper.h  daff_test.go  go.mod
bindings/matlab/: CMakeLists.txt  DAFF.m  DAFFMexDLL.def  DAFFMexHelpers.cpp  DAFFMexHelpers.h  DAFFMexMain.cpp  README.md  build_Matlab_DAFF.m
bindings/python/: CMakeLists.txt  FILEFORMAT.md  LICENSE.md  MANIFEST.in  README.md  daff_example.py  pydaff.cpp  pydaffdoc.hpp  setup.py  setup_with_lib.py.proto
bindings/rust/: .gitignore  BUILDING.md  CMakeLists.txt  Cargo.toml  README.md  build.rs  daff_rust_wrapper.cpp  daff_rust_wrapper.h
bindings/rust/examples/: basic_usage.rs
bindings/rust/src/: ffi.rs  lib.rs
bindings/rust/tests/: integration_test.rs
cmake/: FindPython.cmake  FindSndFile.cmake
doc/: CMakeLists.txt  doxyfile.in  doxygen.footer.html.in
include/: DAFF.h  DAFFContent.h  DAFFContentDFT.h  DAFFContentIR.h  DAFFContentMPS.h  DAFFContentMS.h  DAFFContentPS.h  DAFFDefs.h  DAFFMetadata.h  DAFFProperties.h  DAFFReader.h  DAFFSCTransform.h  DAFFTransformerIR2DFT.h  DAFFUtils.h
include/daffviz/: DAFFViz.h  DAFFVizArrow.h  DAFFVizBalloonPlot.h  DAFFVizCarpetPlot.h  DAFFVizCartesianCoordinateAssistant.h  DAFFVizGlobalLock.h  DAFFVizGrid.h  DAFFVizLabel.h  DAFFVizLine.h  DAFFVizPlane.h  DAFFVizSGNode.h  DAFFVizSphere.h  DAFFVizSphericalCoordinateAssistant.h  DAFFVizSphericalDirectionIndicator.h
matlab/: README.md
python/: DAFF.py  DAFFOrientation.py  DAFFProperties.py  README.md
src/: DAFFHeader.h  DAFFMetadataImpl.cpp  DAFFMetadataImpl.h  DAFFPropertiesImpl.h  DAFFReader.cpp  DAFFReaderImpl.cpp  DAFFReaderImpl.h  DAFFSCTransform.cpp  DAFFTransformerIR2DFT.cpp  DAFFUtils.cpp  Utils.cpp  Utils.h
src/daffviz/: DAFFVizArrow.cpp  DAFFVizBalloonPlot.cpp  DAFFVizCarpetPlot.cpp  DAFFVizCartesianCoordinateAssistant.cpp  DAFFVizGlobalLock.cpp  DAFFVizGrid.cpp  DAFFVizLabel.cpp  DAFFVizLine.cpp  DAFFVizPlane.cpp  DAFFVizSGNode.cpp  DAFFVizSphere.cpp  DAFFVizSphericalCoordinateAssistant.cpp  DAFFVizSphericalDirectionIndicator.cpp
tests/: CMakeLists.txt
tests/daffviztest/: CMakeLists.txt  VTKDAFFVizWindow.cpp  VTKDAFFVizWindow.h  main.cpp
tests/deserializertest/: CMakeLists.txt  DAFFFileBufferTest.cpp  DAFFQtResourceTest.cpp
tests/qtdaffviztest/: CMakeLists.txt  QtDAFFVizTestWindow.cpp  QtDAFFVizTestWindow.h  main.cpp  ui_DAFFVizQtTestWindow.h
tests/qttest/: CMakeLists.txt  DAFFVizQtTestWindow.cpp  DAFFVizQtTestWindow.h  main.cpp  ui_DAFFVizQtTestWindow.h
tests/qtvtktest/: CMakeLists.txt  DAFFVizQtVTKRenderWindow.cpp  DAFFVizQtVTKRenderWindow.h  main.cpp  ui_DAFFVizQtVTKRenderWindow.h
tests/tryout/: CMakeLists.txt  EndianessTest.cpp  MetadataImplTest.cpp  ReaderTest.cpp  SCTransformTest.cpp
tests/verification/: CMakeLists.txt  VerificationTest.cpp
tests/vtkdaffircarpet/: CMakeLists.txt  main.cpp
tests/vtktest/: CMakeLists.txt  MovieTest.cpp  main.cpp
